# single-page-menu-hookahbar

./: .flake8  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/static/: style.css
app/templates/: order.html  payment.html  table.html
